--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
-    <title>音乐播放器</title>
+    <title>enjoy the music!</title>
     <link type="text/css" rel="stylesheet" href="./css/index.css">
 </head>
 <body>
